# recommendation-system

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agents.md  docker-compose.kafka.yml  docker-compose.yml  prompt.md  pyproject.toml
dashboard/: README.md  index.html  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts
dashboard/src/components/: ABTestResults.tsx  Card.tsx  FunnelVisualization.tsx  ModelComparison.tsx  SystemMetrics.tsx  index.ts
dashboard/src/hooks/: useMetrics.ts
dashboard/src/types/: index.ts
notebooks/: 01_eda_retailrocket.ipynb  04_advanced_models.ipynb
scripts/: evaluate_models.py  extract_data.py  process_data.py  train_baseline.py  train_baselines.py  train_v1.py  train_v2.py
src/: config.py
src/api/: config.py  main.py
src/api/routes/: __init__.py  events.py  experiments.py  health.py  metrics.py  recommendations.py  stats.py
src/api/schemas/: events.py  recommendations.py  stats.py
src/api/services/: recommendation_service.py
src/data/features/: __init__.py  session_features.py  user_features.py
src/data/loaders/: retailrocket.py
src/data/processors/: cleaner.py  session_builder.py  splitter.py
src/evaluation/: evaluator.py  metrics.py
src/experimentation/: __init__.py  ab_testing.py  metrics_tracker.py  statistical.py
src/models/: __init__.py  base.py
src/models/baselines/: popular.py  random_model.py
src/models/collaborative/: __init__.py  als.py  bpr.py  item_cf.py  ncf.py  user_cf.py
src/models/content/: __init__.py  item2vec.py
src/models/explainable/: __init__.py  explainer.py
src/models/hybrid/: __init__.py  funnel_aware.py
src/models/retrieval/: __init__.py  two_tower.py
src/models/sequential/: __init__.py  gru4rec.py  sasrec.py
src/streaming/: __init__.py  consumer.py  feature_updater.py  producer.py
src/training/: __init__.py  mlflow_tracker.py  trainer.py  tuning.py
tests/: conftest.py  test_api.py  test_data_processing.py  test_metrics.py  test_models.py  test_v1_models.py
